# CephalonPoseidis

./: .gitignore  Cargo.toml  README.md  build.rs
src/: README.txt  config.rs  lib.rs  main.rs
src/discord/: commands.rs  mod.rs  notifications.rs
src/warframe/: api.rs  messenger.rs  mod.rs  world_state.rs
