[package]
name = "CephalonPoseidis"
version = "0.1.0"
edition = "2021"

[dependencies]
load-dotenv = "0.1.2"
once_cell = "1.20.3"
reqwest = { version = "0.12.12", features = ["json"]}
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serenity = "0.12.4"
tokio = { version = "1.43.0", features = ["full"] }
