[package]
name = "CephalonPoseidis"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
dotenv = "0.15.0"
once_cell = "1.20.3"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.11.7", features = ["client", "gateway", "model", "rustls_backend"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
dotenvy = "0.15.7"